[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-bankops-chargeback"
version = "0.1.0"
description = "Retail banking chargeback operations environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "bankops_chargeback.server.app:main"
baseline = "bankops_chargeback.baseline:main"

[tool.setuptools]
include-package-data = true
packages = ["bankops_chargeback", "bankops_chargeback.server"]
package-dir = { "bankops_chargeback" = ".", "bankops_chargeback.server" = "server" }
